# mkdocs-math

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.cache/: citation_index.json
Reviews/: 2026-07-19-claude-fable-5.md
adr/: 2026-07-19-plugin-architecture-as-is.md  2026-07-19-plugin-site-boundary.md
mkdocs_math/: OUTLINE.md  __init__.py  __main__.py  elements.py  environment_regex.py  export.py  justfile  lint.py  outline.py  pandoc-environments.lua  plugin.py  preprocess_pandoc.py  proofs.js
mkdocs_math/citations/: README.md  __init__.py  citation.py  config.py  plugin.py  registry.py  utils.py
mkdocs_math/templates/: main.html
mkdocs_math/tests/: README.md  __init__.py  conftest.py  test_article_outline.py  test_citation_environments.py  test_elements.py  test_environment_parser.py  test_environment_regex.py  test_environments.py  test_export_latex.py  test_plugin_conversion.py  test_preamble_injection.py  test_preamble_rendering.py
mkdocs_math/tests/fixtures/elements/: E0001 - Valid Node.md  E0002 - Uses First.md  E0003 - Notation Node.md  E0004 - Bad Enum.md  E0005 - Unresolvable Uses.md  E0006 - Superseded Bad.md  E0010 - Bad ID.md
mkdocs_math/tests/fixtures/elements_cycle/: E0001 - Cycle A.md  E0002 - Cycle B.md
mkdocs_math/tests/fixtures/elements_duplicate/: E0001 - Duplicate.md  E0001 - First.md
mkdocs_math/tests/test_project/: mkdocs.yml  preamble.tex
mkdocs_math/tests/test_project/docs/: environments_with_math.md  index.md  local_preamble_test.md  preamble_test.md  test_article.md
(+6 files in other folders)
